# immersion-bot

./: .gitignore  Cargo.toml  README.md  perdition.db
.github/workflows/: run_bot.yaml
src/: commands.rs  constants.rs  kotoba.rs  main.rs  migrate.rs  model.rs  repository.rs  roles.rs  utils.rs
src/model/: mod.rs
src/repository/: mod.rs  postgres_db.rs  sqlite_db.rs
