[package]
name = "immersion-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
poise = "0.6.1"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = "1.0.215"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
