[package]
name = "immersion-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
dotenv = "0.15.0"
futures = "0.3.31"
poise = "0.6.1"
rand = "0.9.0"
serde_json = "1.0.140"
reqwest = { version = "0.12.14", features = ["json"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = "1.0.219"
serenity = "0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
