[package]
name = "immersion-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
futures = "0.3.31"
poise = "0.6.1"
rand = "0.9.1"
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serenity = "0.12"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }